; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/clipbrd/extr_cliputils.c_DeleteClipboardContent.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/clipbrd/extr_cliputils.c_DeleteClipboardContent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@Globals = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DeleteClipboardContent() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Globals, i32 0, i32 0), align 4
  %2 = call i32 @OpenClipboard(i32 %1)
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %7, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Globals, i32 0, i32 0), align 4
  %6 = call i32 @ShowLastWin32Error(i32 %5)
  br label %15

7:                                                ; preds = %0
  %8 = call i32 (...) @EmptyClipboard()
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %7
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Globals, i32 0, i32 0), align 4
  %12 = call i32 @ShowLastWin32Error(i32 %11)
  br label %13

13:                                               ; preds = %10, %7
  %14 = call i32 (...) @CloseClipboard()
  br label %15

15:                                               ; preds = %13, %4
  ret void
}

declare dso_local i32 @OpenClipboard(i32) #1

declare dso_local i32 @ShowLastWin32Error(i32) #1

declare dso_local i32 @EmptyClipboard(...) #1

declare dso_local i32 @CloseClipboard(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
